--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h2>Welcome to Github</h2>
     <p>It is the git and github project</p>
+    <br>
+    <p>It is new feature creating</p>
 </body>
 </html>
