feature have term and condition

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>It is the git and github project</p>
     <br>
     <p>It is new feature creating</p>
+    <p>The feature includes the specific terms and conditions</p>
 </body>
 </html>
